# sentin4e-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  examples.txt  pyproject.toml  report.json
.agents/skills/cli-architect/: SKILL.md
.github/workflows/: ci.yml  test.yml
docs/: SPEC.md  TASK.md  usage.md
docs/architecture/: ARCHITECTURE.md
docs/roadmap/: ROADMAP.md
examples/: sample_report.json
src/guardcli/: __init__.py  cli.py  dashboard.py  exceptions.py  formatter.py  headers.py  main.py  raw_inspect.py  retry.py  schemas.py  scoring.py  shell.py
src/guardcli/models/: report.py
src/guardcli/output/: json_export.py  serializers.py  terminal.py
src/guardcli/scanner/: __init__.py  headers.py  score.py  tls.py  weights.py
src/guardcli/utils/: logger.py  validator.py
src/sentin4e/: __init__.py  cli.py  dashboard.py  exceptions.py  formatter.py  headers.py  logger.py  main.py  raw_inspect.py  retry.py  schemas.py  scoring.py  shell.py  waf_detector.py
tests/: test_cli.py  test_dashboard.py  test_headers.py  test_raw_inspect.py  test_score.py  test_scoring.py  test_shell.py  test_tls.py  test_validator.py
