[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "guardcli"
version = "0.1.0"
description = "A defensive cybersecurity CLI tool that audits HTTP security posture"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
guard = "guardcli.cli:app"
