[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sentin4e"
version = "0.1.1"
description = "A defensive cybersecurity CLI tool that audits HTTP security posture"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
    "prompt_toolkit>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.8.0",
    "ruff>=0.1.14",
]

[project.scripts]
sentin4e = "sentin4e.main:run"

[tool.mypy]
strict = true
warn_unused_configs = true

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = []
